[package]
name = "escrow_program"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2.0"
spl-associated-token-account = { version = "7.0.0", features = ["no-entrypoint"] }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
borsh = "0.9.3"   # or latest version
borsh-derive = "0.9.1"

[lib]
crate-type = ["cdylib", "lib"]   # ✅ Already have this